# toit_edge_impulse

./: .gitmodules  Makefile  README.md
build-root/: CMakeLists.txt  partitions.csv  sdkconfig
build-root/model_folder/edge-impulse-sdk/: README.md:Zone.Identifier
build-root/model_folder/model-parameters/: anomaly_metadata.h  model_metadata.h  model_variables.h
build-root/model_folder/tflite-model/: tflite_learn_7_compiled.cpp  tflite_learn_7_compiled.h
components/fall_detection/: CMakeLists.txt  echo.cpp  fall_detection.cpp  fall_detection.h  idf_component.yml  toit_envelope.cpp
components/toit-qrcode/: CMakeLists.txt  echo.cpp  qrcode.toit
